# text_chunker

./: LICENSE  README.md  pyproject.toml
src/text_chunker/: __init__.py  text_chunker.py
tests/: test.py  test_paragraphs.py  test_sentences.py  test_text.txt
