[build-system]
requires = ["hatchling","nltk"]
build-backend = "hatchling.build"

[project]
name = "text_chunker"
version = "0.2.2"
authors = [
  { name="rpawk", email="rpawizardk@gmail.com" },
]
description = "A Python class that takes in long text as input and divides it into shorter chunks no longer than a specified length."
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rpawk/text_chunker"
"Bug Tracker" = "https://github.com/rpawk/text_chunker/issues"
